--- a/index.html
+++ b/index.html
@@ -433,12 +433,13 @@
         }
     </style>
 </head>
+<link rel="manifest" href="manifest.json">
 <body>
     <div id="notification" class="notification"></div>
 
     <header>
         <h1>Центр помощи бездомным животным "Собака"</h1>
-    </header>
+    </header>lio
     <hr>
     <div id="content">
         <div id="menu">
